# cascade-rs

./: .gitignore  ANGLE_CONTROL_IMPLEMENTATION.md  CONSTRUCT_IMPLEMENTATION.md  CONSTRUCT_TASK_COMPLETE.md  Cargo.toml  FOUNDATION_MATH_SUMMARY.md  OCCT_FEATURES.md  PROJECT_BOARD.md  README.md  SPRINT.md  debug_edge_consistency.rs  debug_sphere_check.rs  test_bad_geometry.rs  test_cyl_quick.rs  test_cylinder.rs  test_surface_interpolation.rs  test_vrml_manual.rs  verify_cylinder.sh
examples/: math_demo.rs  test_boolean_many.rs  test_step_files.rs
memory/: 2026-02-19-sweep-revol.md  2026-02-19.md  assembly-implementation.md
scripts/: extract_tests.py  gen_comprehensive_tests.py  generate_corpus.py  gh-project-setup.sh  gh-project-update.sh
src/: lib.rs  precision.rs
src/approx/: mod.rs
src/bnd/: b_generic.rs  box_2d.rs  box_3d.rs  mod.rs  obb.rs  range.rs  sphere.rs
src/boolean/: mod.rs
src/brep/: mod.rs  topology.rs
src/chamfer/: mod.rs
src/check/: mod.rs
src/construct/: bisector.rs  mod.rs
src/curve/: mod.rs
src/draft/: mod.rs
src/feature/: mod.rs
src/fillet/: mod.rs
src/foundation/: collections.rs  handles.rs  math.rs  mod.rs  primitives.rs  rtti.rs
src/geom/: mod.rs
src/gp/: ax1.rs  ax2.rs  (+32 more)
test_corpus/: cube_external.step  tube_M22x1.5_threaded.step  tube_M22x2.5_threaded.step  tube_threaded.step
test_data/: box.step
tests/: mesh_test.rs  step_test.rs  test_angle_control.rs  test_bspline_surface.rs  test_deflection.rs  test_obj_export.rs  test_ply_export.rs  test_surface_of_revolution.rs  test_validation.rs  test_write_step.rs
(+21 files in other folders)
