[package]
name = "cascade-rs"
version = "0.1.0"
edition = "2021"
description = "Pure Rust CAD kernel - OpenCASCADE feature parity"
license = "Apache-2.0"
repository = "https://github.com/heye/cascade-rs"

[lib]
name = "cascade"
path = "src/lib.rs"

[[bin]]
name = "validate-features"
path = "src/bin/validate_features.rs"

# Corpus generation is done via Python script (scripts/generate_corpus.py)
# [[bin]]
# name = "generate-corpus"
# path = "src/bin/generate_corpus.rs"

[dependencies]
nalgebra = "0.32"
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rayon = "1.8"
chrono = "0.4"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[build-dependencies]
# For golden corpus generation (optional, only needed once)
# opencascade-sys = { version = "0.2", optional = true }

[features]
default = []
generate-corpus = []  # Enable to build corpus generator with OCCT

# Benchmarks (uncomment when implementing)
# [[bench]]
# name = "boolean_ops"
# harness = false
